fix stack easter egg visible problem modal add

--- a/data_structure/general.css
+++ b/data_structure/general.css
@@ -259,3 +259,6 @@ span.name{
     width: 70px;
     height: 70px;
 }
+svg{
+    overflow: visible;
+}
